style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background: #222;
    font-family: Arial;
}

.calculator {
    background: #333;
    padding: 20px;
    border-radius: 12px;
    width: 280px;
}

body.light {
    background: #f4f4f4;
}

body.light .calculator {
    background: white;
}

body.light button {
    background: #e0e0e0;
}

#display {
    width: 100%;
    height: 50px;
    margin-bottom: 15px;
    font-size: 20px;
    text-align: right;
    padding: 10px;
    border-radius: 10px;
    border: none;
    outline: none;
}


.buttons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

button {
    padding: 15px;
    font-size: 18px;
    border: none;
    border-radius: 12px;
    cursor: pointer;
    background: #444;
    color: white;
    transition: all 0.2s ease;
}

button:hover {
    background: #666;
    transform: scale(1.05);
}

button:active {
    transform: scale(0.95);
}

.zero {
    grid-column: span 2;
}


@media (max-width: 400px) {
    .calculator {
        width: 95%;
    }

    button {
        padding: 12px;
        font-size: 16px;
    }
}

